Incorporado el analisis por macrozonas

--- a/fig3_agrupacion_geografica_periodos_diferentes.ipynb
+++ b/fig3_agrupacion_geografica_periodos_diferentes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,13 @@
     "zona_concepcion_frontera = \"\"\"(18,19,20,21,28,29)\"\"\"\n",
     "zona_region_de_los_lagos = \"\"\"(22,23,24)\"\"\"\n",
     "zona_region_canales = \"\"\"(25,26,33)\"\"\"\n",
+    "\n",
+    "lista_zonas_servicios_salud = [zona_norte_grande,\n",
+    "                zona_norte_chico,\n",
+    "                zona_nucleo_central,\n",
+    "                zona_concepcion_frontera,\n",
+    "                zona_region_de_los_lagos,\n",
+    "                zona_region_canales]\n",
     "\n",
     "lista_zonas = [\"ZonaNorteGrande\",\n",
     "               \"ZonaNorteChico\",\n",
@@ -43,12 +50,83 @@
     "               \"Zona Nucleo Central\",\n",
     "               \"Zona Concepción y la Frontera\",\n",
     "               \"Zona Región De Los Lagos\",\n",
-    "               \"Zona de los Región Canales\"]"
+    "               \"Zona de los Región Canales\"]\n",
+    "\n",
+    "year_list=[2017,2018,2019,2022,2023]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def common_filter_zona(zona):\n",
+    "#     return \"\"\"\n",
+    "# FROM datos_urgencia_consolidados.parquet\n",
+    "# where IdCausa in (3,4,5,6,10,11)\n",
+    "# --and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
+    "# and CodigoDependencia in \"\"\" + zona +\"\"\"\n",
+    "# --group by CodigoDependencia, fecha\n",
+    "# group by zona, fecha\n",
+    "# \"\"\" + \"\"\"\n",
+    "# having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
+    "# \"\"\"\n",
+    "\n",
+    "# df2 = duckdb.sql(\"\"\"\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNorteGrande' as zona\n",
+    "# --    , 'Menores_1' as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_norte_grande) + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNorteChico' as zona\n",
+    "# --    ,'De_1_a_4' as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_norte_chico)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNucleoCentral' as zona\n",
+    "# --    , 'De_5_a_14' as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_nucleo_central)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaConcepcionLaFrontera' as zona\n",
+    "# --    , 'De_15_a_64'  as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_concepcion_frontera)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaRegionDeLosLagos' as zona\n",
+    "# --    , 'De_15_a_64'  as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_region_de_los_lagos)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaRegionCanales' as zona\n",
+    "# --    , 'De_65_y_mas' as grupo_etario\n",
+    "#     , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
+    "# \"\"\"+ common_filter_zona(zona_region_canales) + \"\"\"\n",
+    "# \"\"\").df()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -63,86 +141,38 @@
     }
    ],
    "source": [
+    "# ILUSTRACIÓN 1 ATENCIONES DIARIAS DE URGENCIA PARA \n",
+    "# CADA DÍA DEL AÑO CORRESPONDIENTES AL PERIODO 2017 -2023 para diferentes zonas geográficas \n",
     "#Genera una comparación de las atenciones diarias correspondiente \n",
     "# a diferentes regiones geográficas. Las zonas están determinadas \n",
     "# por lo servicios de salud que las componen\n",
     "# en los gráficos se muestra la información para diferentes años\n",
     "\n",
     "\n",
-    "def common_filter_zona(zona):\n",
-    "    return \"\"\"\n",
-    "FROM datos_urgencia_consolidados.parquet\n",
-    "where IdCausa in (3,4,5,6,10,11)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2019)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2022,2023)\n",
-    "and CodigoDependencia in \"\"\" + zona +\"\"\"\n",
-    "--group by CodigoDependencia, fecha\n",
-    "group by zona, fecha\n",
-    "\"\"\" + \"\"\"\n",
-    "having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
-    "\"\"\"\n",
-    "\n",
     "#here CodigoDependencia indicates the \"Servicio de Salud\"\n",
     "#to ignote the grouping by \"region\"  set \"CodigoRegion\" to a constant and remove it from the group by\n",
-    "df2 = duckdb.sql(\"\"\"\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNorteGrande' as zona\n",
-    "--    , 'Menores_1' as grupo_etario\n",
+    "query_list = []\n",
+    "for k, servicios_zona, nombre_zona in zip([k for k in range(len(lista_zonas_servicios_salud))],lista_zonas_servicios_salud,lista_zonas):\n",
+    "    query_list.append(\"\"\"\n",
+    "SELECT year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia \n",
+    "    ,\"\"\" + \"'\"  + nombre_zona + \"'\" + \"\"\" as zona\n",
     "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_norte_grande) + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNorteChico' as zona\n",
-    "--    ,'De_1_a_4' as grupo_etario\n",
-    "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_norte_chico)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNucleoCentral' as zona\n",
-    "--    , 'De_5_a_14' as grupo_etario\n",
-    "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_nucleo_central)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaConcepcionLaFrontera' as zona\n",
-    "--    , 'De_15_a_64'  as grupo_etario\n",
-    "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_concepcion_frontera)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaRegionDeLosLagos' as zona\n",
-    "--    , 'De_15_a_64'  as grupo_etario\n",
-    "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_region_de_los_lagos)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaRegionCanales' as zona\n",
-    "--    , 'De_65_y_mas' as grupo_etario\n",
-    "    , sum(Menores_1) + sum(De_1_a_4) + sum(De_5_a_14) + sum(De_15_a_64)  + sum(De_65_y_mas) as atenciones\n",
-    "\"\"\"+ common_filter_zona(zona_region_canales) + \"\"\"\n",
-    "\"\"\").df()\n",
+    "FROM datos_urgencia_consolidados.parquet\n",
+    "where IdCausa in (3,4,5,6,10,11)\n",
+    "--and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
+    "and CodigoDependencia in \"\"\" + servicios_zona +\"\"\"\n",
+    "group by zona, fecha\n",
+    "having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
+    "\"\"\")\n",
+    "    if k +1< len(lista_zonas_servicios_salud):\n",
+    "        query_list.append(\"\"\" UNION \"\"\")\n",
+    "\n",
+    "df2 = duckdb.sql(''.join(query_list)).df()\n",
     "\n",
     "df2 = df2.sort_values(by=['zona','year','nrodia']).reset_index(drop = True)\n",
     "\n",
-    "\n",
-    "# ILUSTRACIÓN 1 ATENCIONES DIARIAS DE URGENCIA PARA \n",
-    "# CADA DÍA DEL AÑO CORRESPONDIENTES AL PERIODO 2017 -2023 para diferentes zonas geográficas \n",
     "fig = plt.figure(figsize = (12,8))\n",
-    "#fig = plt.figure(figsize = (12,14))\n",
-    "year_list=[2017,2018,2019,2022,2023]\n",
     "\n",
     "for k in range(5):\n",
     "    df3 =df2[df2[\"year\"]==year_list[k]]\n",
@@ -168,15 +198,8 @@
     "    plt.plot(range(1),range(1))\n",
     "\n",
     "ax.legend(lista_zonas_legend,loc='center left',fontsize = 10 )\n",
-    "#ax.clear()\n",
-    "#ax.legend(h, l, loc='upper left')\n",
     "ax.axis('off')\n",
-    "#ax.legend(targets,loc='upper left',fontsize = 12 )\n",
-    "\n",
-    "#plt.show()\n",
-    "plt.savefig('fig3_urgencias_geografica_años.png', bbox_inches='tight')\n",
-    "\n",
-    "\n"
+    "plt.savefig('fig3_urgencias_geografica_años.png', bbox_inches='tight')"
    ]
   }
  ],
