--- a/fig4_agrupacion_geografica_vs_grupo_etario_periodo_fijo.ipynb
+++ b/fig4_agrupacion_geografica_vs_grupo_etario_periodo_fijo.ipynb
@@ -2,66 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "┌───────────────────┬──────────────────────┬─────────┬───┬──────────────┬──────────────┬───────────────────┐\n",
-       "│ IdEstablecimiento │   NEstablecimiento   │ IdCausa │ … │ CodigoComuna │ NombreComuna │ __index_level_0__ │\n",
-       "│      varchar      │       varchar        │  int64  │   │    double    │   varchar    │       int64       │\n",
-       "├───────────────────┼──────────────────────┼─────────┼───┼──────────────┼──────────────┼───────────────────┤\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 0 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 1 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 2 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 3 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 4 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 5 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 6 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 7 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 8 │\n",
-       "│ 28-111            │ Hospital Dr. Ricar…  │      25 │ … │       8203.0 │ Cañete       │                 9 │\n",
-       "│   ·               │          ·           │       · │ · │           ·  │  ·           │                 · │\n",
-       "│   ·               │          ·           │       · │ · │           ·  │  ·           │                 · │\n",
-       "│   ·               │          ·           │       · │ · │           ·  │  ·           │                 · │\n",
-       "│ 24-330            │ Centro de Salud Fa…  │       1 │ … │         NULL │ NULL         │              9990 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9991 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9992 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9993 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9994 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9995 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9996 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9997 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9998 │\n",
-       "│ 18-826            │ SAPU-Hualqui         │      23 │ … │       8105.0 │ Hualqui      │              9999 │\n",
-       "├───────────────────┴──────────────────────┴─────────┴───┴──────────────┴──────────────┴───────────────────┤\n",
-       "│ ? rows (>9999 rows, 20 shown)                                                       22 columns (6 shown) │\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Importar librerias necesarias\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "#import seaborn as sns\n",
-    "import duckdb\n",
-    "\n",
-    "duckdb.read_parquet(\"\"\"datos_urgencia_consolidados.parquet\"\"\")"
+    "import duckdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +31,15 @@
     "zona_region_de_los_lagos = \"\"\"(22,23,24)\"\"\"\n",
     "zona_region_canales = \"\"\"(25,26,33)\"\"\"\n",
     "\n",
+    "lista_zonas_servicios_salud = [zona_norte_grande,\n",
+    "                zona_norte_chico,\n",
+    "                zona_nucleo_central,\n",
+    "                zona_concepcion_frontera,\n",
+    "                zona_region_de_los_lagos,\n",
+    "                zona_region_canales]\n",
+    "\n",
     "year = \"(2019)\"\n",
+    "\n",
     "lista_zonas = [\"ZonaNorteGrande\",\n",
     "               \"ZonaNorteChico\",\n",
     "               \"ZonaNucleoCentral\",\n",
@@ -95,7 +60,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def common_filter_zona(zona):\n",
+    "#     return \"\"\"\n",
+    "# FROM datos_urgencia_consolidados.parquet\n",
+    "# where IdCausa in (3,4,5,6,10,11)\n",
+    "# and year(strptime(fecha, '%d/%m/%Y')) in\"\"\" + year + \"\"\"\n",
+    "# --and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
+    "# --and year(strptime(fecha, '%d/%m/%Y')) in (2022,2023)\n",
+    "# and CodigoDependencia in \"\"\" + zona +\"\"\"\n",
+    "# --group by CodigoDependencia, fecha\n",
+    "# group by zona, fecha\n",
+    "# \"\"\" + \"\"\"\n",
+    "# having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
+    "# \"\"\"\n",
+    "\n",
+    "# #here CodigoDependencia indicates the \"Servicio de Salud\"\n",
+    "# #to ignote the grouping by \"region\"  set \"CodigoRegion\" to a constant and remove it from the group by\n",
+    "# df2 = duckdb.sql(\"\"\"\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNorteGrande' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_norte_grande) + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNorteChico' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_norte_chico)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaNucleoCentral' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_nucleo_central)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaConcepcionLaFrontera' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_concepcion_frontera)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaRegionDeLosLagos' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_region_de_los_lagos)  + \"\"\"\n",
+    "# UNION\n",
+    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "# --    , CodigoDependencia  as CodigoRegion\n",
+    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
+    "#     , 'ZonaRegionCanales' as zona\n",
+    "#     , sum(Menores_1)  as Menores_1\n",
+    "#     , sum(De_1_a_4)  as De_1_a_4\n",
+    "#     , sum(De_5_a_14)  as De_5_a_14\n",
+    "#     , sum(De_15_a_64)   as De_15_a_64\n",
+    "#     , sum(De_65_y_mas) as De_65_y_mas\n",
+    "# \"\"\"+ common_filter_zona(zona_region_canales) + \"\"\"\n",
+    "# \"\"\").df()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,89 +182,32 @@
     "\n",
     "print(\"Gráfica correspondiente al año \" + year)\n",
     "\n",
-    "def common_filter_zona(zona):\n",
-    "    return \"\"\"\n",
+    "#here CodigoDependencia indicates the \"Servicio de Salud\"\n",
+    "#to ignote the grouping by \"region\"  set \"CodigoRegion\" to a constant and remove it from the group by\n",
+    "query_list = []\n",
+    "for k, servicios_zona, nombre_zona in zip([k for k in range(len(lista_zonas_servicios_salud))],lista_zonas_servicios_salud,lista_zonas):\n",
+    "    query_list.append(\"\"\"\n",
+    "SELECT year(strptime(fecha, '%d/%m/%Y')) as year\n",
+    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia \n",
+    "    ,\"\"\" + \"'\"  + nombre_zona + \"'\" + \"\"\" as zona\n",
+    "    , sum(Menores_1)  as Menores_1\n",
+    "    , sum(De_1_a_4)  as De_1_a_4\n",
+    "    , sum(De_5_a_14)  as De_5_a_14\n",
+    "    , sum(De_15_a_64)   as De_15_a_64\n",
+    "    , sum(De_65_y_mas) as De_65_y_mas\n",
     "FROM datos_urgencia_consolidados.parquet\n",
     "where IdCausa in (3,4,5,6,10,11)\n",
     "and year(strptime(fecha, '%d/%m/%Y')) in\"\"\" + year + \"\"\"\n",
     "--and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2022,2023)\n",
-    "and CodigoDependencia in \"\"\" + zona +\"\"\"\n",
-    "--group by CodigoDependencia, fecha\n",
+    "and CodigoDependencia in \"\"\" + servicios_zona +\"\"\"\n",
     "group by zona, fecha\n",
-    "\"\"\" + \"\"\"\n",
     "having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
-    "\"\"\"\n",
+    "\"\"\")\n",
+    "    if k +1< len(lista_zonas_servicios_salud):\n",
+    "        query_list.append(\"\"\" UNION \"\"\")\n",
     "\n",
-    "#here CodigoDependencia indicates the \"Servicio de Salud\"\n",
-    "#to ignote the grouping by \"region\"  set \"CodigoRegion\" to a constant and remove it from the group by\n",
-    "df2 = duckdb.sql(\"\"\"\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNorteGrande' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_norte_grande) + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNorteChico' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_norte_chico)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaNucleoCentral' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_nucleo_central)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaConcepcionLaFrontera' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_concepcion_frontera)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaRegionDeLosLagos' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_region_de_los_lagos)  + \"\"\"\n",
-    "UNION\n",
-    "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "--    , CodigoDependencia  as CodigoRegion\n",
-    "    , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "    , 'ZonaRegionCanales' as zona\n",
-    "    , sum(Menores_1)  as Menores_1\n",
-    "    , sum(De_1_a_4)  as De_1_a_4\n",
-    "    , sum(De_5_a_14)  as De_5_a_14\n",
-    "    , sum(De_15_a_64)   as De_15_a_64\n",
-    "    , sum(De_65_y_mas) as De_65_y_mas\n",
-    "\"\"\"+ common_filter_zona(zona_region_canales) + \"\"\"\n",
-    "\"\"\").df()\n",
+    "df2 = duckdb.sql(''.join(query_list)).df()\n",
+    "\n",
     "\n",
     "df2 = df2.sort_values(by=['zona','year','nrodia']).reset_index(drop = True)\n",
     "df3 = pd.concat([df2[[\"zona\",\"year\",\"nrodia\",\"Menores_1\"]].rename(columns={\"Menores_1\":\"atenciones\"}).assign(grupo_etario = \"Menores_1\"),\n",
@@ -227,7 +227,6 @@
     "    df4 =df3[df3[\"grupo_etario\"]==grupo_etario_list[k]]\n",
     "    ax = fig.add_subplot(2,3,k+1) \n",
     "    df_dict = {key[0]: d for key, d in df4[['zona','year','nrodia','atenciones']].groupby(['zona'])}\n",
-    "    #targets = list(df_dict.keys())\n",
     "    ax.set_prop_cycle(color = plt.get_cmap(\"tab10\").colors)\n",
     "    for key in lista_zonas:\n",
     "        plt.plot(df_dict[key]['nrodia'],100*df_dict[key]['atenciones'].rolling(7,center=True).mean()/float(sum(df_dict[key]['atenciones'])) )\n",
@@ -248,12 +247,7 @@
     "   plt.plot(range(1),range(1))\n",
     "\n",
     "ax.legend(lista_zonas_legend,loc='center left',fontsize = 10 )\n",
-    "#ax.clear()\n",
-    "#ax.legend(h, l, loc='upper left')\n",
     "ax.axis('off')\n",
-    "#ax.legend(targets,loc='upper left',fontsize = 12 )\n",
-    "\n",
-    "#plt.show()\n",
     "plt.savefig('fig4_urgencias_geografica_grupo_etario_2019.png', bbox_inches='tight')"
    ]
   }
